# macdozer

./: LICENSE  README.md
pip-project/: pyproject.toml
pip-project/macdozer/: __init__.py  icns.py  main.py
